# SImpleFrontEnd

./: main.py  pyproject.toml  settings.py
router/: routers.py
server/: simple_server.py
shop/: models.py  types.py  urls.py  views.py
shop/templates/: base.html  categories.html  faq.html  main_page.html  orders.html
template_engine/: base_templates.py  engine.py
templates/: 404.html
